--- a/my-first-app2/src/app/servers/servers.component.html
+++ b/my-first-app2/src/app/servers/servers.component.html
@@ -50,8 +50,9 @@
       </ng-template>
     </div>
   </li>
-
+  <li>ngStyle (edit ccs style with binding properties) </li>
+  <li>ngClass (add or delete a class to a element by a condition or boolean variable) watch example in server.component.html</li>
+  <li>ngFor (add or delete a class to a element by a condition or boolean variable) watch example in server.component.html</li>
 </ol>
-<app-server></app-server>
 
-<app-server></app-server>
+<app-server *ngFor="let server of servers"></app-server>
