--- a/my-first-app2/src/app/server/server.component.html
+++ b/my-first-app2/src/app/server/server.component.html
@@ -1,4 +1,7 @@
-<p> {{'Server'}} with ID! {{serverId}} is  {{getServerStatus()}}</p>
+<p [ngStyle]="{backgroundColor:getColor()}"
+   [ngClass]="{'online': isOnline()}"
+>
+  {{ 'Server' }} with ID! {{ serverId }} is  {{ getServerStatus() }}</p>
 <!-- only use with string {{ }} -->
 
 <hr>
