--- a/ang7-cleanup/src/app/header/header.component.html
+++ b/ang7-cleanup/src/app/header/header.component.html
@@ -1,1 +1,34 @@
-<h1>the header</h1>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="nav-header">
+
+      <button type="button" class="navbar-toggle" (click)="collapsed = !collapsed">
+        <span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>
+      </button>
+      <a hrf="#" class="navbar-brand"> Recipe Book </a>
+
+
+      <!-- <div class="collapse navbar-collapse"> -->
+      <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
+
+
+      <!-- horizontal menu --->
+        <ul class="nav  navbar-nav">
+          <li><a href="#">Recipes</a></li>
+          <li><a href="#">Shopping List</a></li>
+        </ul>
+
+        <!-- dropdown menu --->
+        <ul class="nav  navbar-nav navbar-right">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"> </span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Save Data</a></li>
+              <li><a href="#">Fetch Data</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  </nav>
