--- a/ang7-cleanup/src/app/recipes/recipes.component.html
+++ b/ang7-cleanup/src/app/recipes/recipes.component.html
@@ -1,3 +1,12 @@
 <p>
   recipes works!
 </p>
+<div class="row ">
+  <div class="col-xs-5">
+    <app-recipes-list>
+    </app-recipes-list>
+  </div>
+  <div class="col-xs-7">
+    <app-recipes-details></app-recipes-details>
+  </div>
+</div>
