--- a/ang7-cleanup/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/ang7-cleanup/src/app/recipes/recipes-list/recipes-list.component.html
@@ -1,1 +1,21 @@
-<app-recipes-item></app-recipes-item>
+
+<div class="row">
+  <div class="col-xs-12">
+    <button class="btn btn-success"> New Recipe </button>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <a href="#" class="list-group0-item clearfix">
+      <div class="pull-left">
+        <h4 class="list-group-item-heading"> Recipe Name</h4>
+        <p class="list-group-item-text"> Description </p>
+      </div>
+      <span class="pull-right">
+        <img src="" alt="" class="img-responsive" style="max-height: 50px;">
+      </span>
+    </a>
+    <app-recipes-item></app-recipes-item>
+  </div>
+</div>
+
