--- a/ang7-cleanup/src/app/recipes/recipes-details/recipes-details.component.html
+++ b/ang7-cleanup/src/app/recipes/recipes-details/recipes-details.component.html
@@ -1,3 +1,33 @@
-<p>
-  recipes-details works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <img src="" alt="" class="img-responsive">
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <h1>Recipe's name</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="btn-group">
+      <button type="button"  class="btn btn-primary dropdown-toggle"> Manage recipe <span class="caret"></span></button>
+    </div>
+    <ul class="dropdown-menu">
+      <li><a href="#">Add ingredients to shopping list</a></li>
+      <li><a href="#">Edit Recipe</a></li>
+      <li><a href="#">Delete Recipe</a></li>
+      </ul>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    Description
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    Ingredients
+  </div>
+</div>
+
