--- a/ang7-cleanup/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/ang7-cleanup/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -16,8 +16,9 @@
       </div>
       <div class="row">
         <div class="col-xs-12 form-group">
-          <label for="amount"> Amount</label>
-          <input type="number" id="amount" class="form-control">
+          <button class="btn btn-success" style="margin: 10px;"> Add </button>
+          <button class="btn btn-danger" style="margin: 10px;"> Delete </button>
+          <button class="btn btn-primary" style="margin: 10px;"> Clear </button>
         </div>
       </div>
     </div>
