--- a/cmp-databinding-start/src/app/cockpit/cockpit.component.html
+++ b/cmp-databinding-start/src/app/cockpit/cockpit.component.html
@@ -5,12 +5,14 @@
     <input type="text" class="form-control" [(ngModel)]="newServerName">
     <label>Server Content</label>
     <input type="text" class="form-control" [(ngModel)]="newServerContent">
+    <!-- send data from the cockpit to the app component -->
+    <!-- ERROR TypeError: _co.onServerAdded is not a function -->
     <br>
     <button
       class="btn btn-primary"
-      (click)="onAddServer()">Add Server</button>
+      (click)="onAddServer($event)">Add Server</button>
     <button
       class="btn btn-primary"
-      (click)="onAddBlueprint()">Add Server Blueprint</button>
+      (click)="onAddBluePrint($event)">Add Server Blueprint</button>
   </div>
 </div>
