--- a/cmp-databinding-start/src/app/app.component.html
+++ b/cmp-databinding-start/src/app/app.component.html
@@ -18,7 +18,9 @@
       <!-- name of the component variable SERVER ELEMENT =  the local variable in component ROOT-->
       <!-- custom properties bindings passing a array trou the server-element to app component. -->
       <!-- [nameComponentVariableCHILD] = "nameComponentVariableATFATHERComponent" -->
-
+      <!-- component comunication is key for any project so, bear in mind INPUT and OUTPUT decorator -->
+      <!-- own events are key too -->
+        <!-- distance between component are too complex to use input or output, when are too distance are another tools like services-->
       </app-server-element>
     </div>
   </div>
