--- a/cmp-databinding-start/src/app/cockpit/cockpit.component.html
+++ b/cmp-databinding-start/src/app/cockpit/cockpit.component.html
@@ -28,8 +28,11 @@
     <button
       class="btn btn-primary"
       (click)="onAddServer(serverNameInput)">Add Server</button>
+<!--    <button EXAMPLE TWO WAY BINDINGS REFERENCE-->
+<!--      class="btn btn-primary" EXAMPLE TWO WAY BINDINGS REFERENCE-->
+<!--      (click)="onAddBluePrint($event)">Add Server Blueprint</button> EXAMPLE TWO WAY BINDINGS REFERENCE -->
     <button
-      class="btn btn-primary"
-      (click)="onAddBluePrint($event)">Add Server Blueprint</button>
+       class="btn btn-primary"
+       (click)="onAddBluePrint(serverNameInput)">Add Server Blueprint</button>
   </div>
 </div>
