--- a/ang7-cleanup/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/ang7-cleanup/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -8,15 +8,25 @@
     <div class="row">
       <div class="col-sm-5 form-group">
         <label for="name">Name</label>
-        <input type="text" id="name" class="form-control">
+        <input
+          type="text"
+          id="name"
+          class="form-control"
+          #nameInput
+        >
       </div>
       <div class="col-sm-2 form-group">
         <label for="amount"> Amount</label>
-        <input type="number" id="amount" class="form-control">
+        <input
+          type="number"
+          id="amount"
+          class="form-control"
+          #amountInput
+        >
       </div>
       <div class="row">
         <div class="col-xs-12 form-group">
-          <button class="btn btn-success" style="margin: 10px;"> Add </button>
+          <button class="btn btn-success" style="margin: 10px;" (click)="onAddItem()"> Add </button>
           <button class="btn btn-danger" style="margin: 10px;"> Delete </button>
           <button class="btn btn-primary" style="margin: 10px;"> Clear </button>
         </div>
