--- a/ang7-cleanup/src/app/shopping-list/shopping-list.component.html
+++ b/ang7-cleanup/src/app/shopping-list/shopping-list.component.html
@@ -1,7 +1,7 @@
 
 <div class="row">
   <div class="col-xs-10">
-    <app-shopping-edit></app-shopping-edit>
+    <app-shopping-edit (ingredientsAdded)="onIngredientsAdded($event)"></app-shopping-edit>
     <hr/>
     <ul class="list-group">
       <a class="list-group-item" style="cursor: pointer" *ngFor="let ingredient of ingredients">
