--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -28,7 +28,7 @@
         </div>
       </ul>
       <p appHighlight>Style me with basic highlight!!</p>
-      <p appBetterHighlight>Style me with basic highlight!!</p>
+      <p [appBetterHighlight]="'red'"  [defaultColor]="'yellow'">Style me with basic highlight!!</p>
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
       </ng-template>
