--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -16,7 +16,8 @@
           {{ evenNumber }}
         </li>
         </div>
-        <div *ngIf="!onlyOdd">
+<!--        <div *ngIf="!onlyOdd">-->
+        <div *appUnless="onlyOdd">
         <li
           class="list-group-item"
           [ngClass]="{odd: oddNumber % 2 !==0}"
@@ -32,6 +33,13 @@
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
       </ng-template>
+      <div [ngSwitch]="value">
+        <p *ngSwitchCase="5">value is 5</p>
+        <p *ngSwitchCase="10">value is 10</p>
+        <p *ngSwitchCase="100">value is 100</p>
+        <p *ngSwitchDefault>value is Default</p>
+      </div>
+
     </div>
   </div>
 </div>
