--- a/prj-directives-final/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/prj-directives-final/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -23,7 +23,7 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">To Shopping List</a></li>
+        <li><a href="#" (click)="onAddToShoppintList()" style="cursor: pointer;">To Shopping List</a></li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
@@ -38,5 +38,10 @@
 <div class="row">
   <div class="col-xs-12">
     Ingredients
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+{{ ingredient.name }} - {{ingredient.amount}}
+      </li>
+    </ul>
   </div>
 </div>
