--- a/prj-directives-final/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/prj-directives-final/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,6 @@
 <a
   href="#"
-  class="list-group-item clearfix"
+  class="jenni list-group-item clearfix"
   (click)="onSelected()">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
