--- a/cat-card/cat-cards/src/app/app.component.html
+++ b/cat-card/cat-cards/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="tbg">
   <div class="theader">
+    <script src="https://use.fontawesome.com/faffa271ef.js"></script>
     <i class="fa fa-cog" aria-hidden="true"></i>
     <i class="fa fa-comments" aria-hidden="true"></i>
     <div class="tlogo">
