--- a/cat-card/cat-cards/src/app/card/card.component.html
+++ b/cat-card/cat-cards/src/app/card/card.component.html
@@ -4,9 +4,7 @@
      (swipeleft)='startAnimation("swipeleft")'
      (swiperight)='startAnimation("swiperight")'
 >
-  <img [src]="users[index].picture" title="tphoto" alt="Tinder Photo" />
-  <div class="tname">{{users[index].name}}, <span class="age">{{users[index].age}}</span></div>
-  <div class="tinfo"><i class="fa fa-book" aria-hidden="true"> 0</i><i class="fa fa-users" aria-hidden="true"> 0</i></div>
+  <app-cat></app-cat>
 </div>
 
     
