--- a/cat-card/cat-cards/src/app/app.component.html
+++ b/cat-card/cat-cards/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="tbg">
   <div class="theader">
-    <script src="https://use.fontawesome.com/faffa271ef.js"></script>
+
     <i class="fa fa-cog" aria-hidden="true"></i>
     <i class="fa fa-comments" aria-hidden="true"></i>
     <div class="tlogo">
-      <img src="/assets/thecatapi_256xW.png" alt="Tinder Logo" title="Tinder Logo" />
+      <img src="/assets/thecatapi_256xW.png" alt="Api Cat Logo" title="Api Cat Logo" />
     </div>
   </div>
   <div class="tbgwrap">
