--- a/cat-card/cat-cards/src/app/app.component.html
+++ b/cat-card/cat-cards/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="tbg">
   <div class="theader">
 
-    <i class="fa fa-cog" aria-hidden="true"></i>
-    <i class="fa fa-comments" aria-hidden="true"></i>
+    <i class="fa fa-search" aria-hidden="true"></i>
+    <i class="fa fa-plus-square" aria-hidden="true"></i>
     <div class="tlogo">
       <img src="/assets/thecatapi_256xW.png" alt="Api Cat Logo" title="Api Cat Logo" />
     </div>
