--- a/cat-card/cat-cards/src/app/cat/cat.component.html
+++ b/cat-card/cat-cards/src/app/cat/cat.component.html
@@ -1,5 +1,5 @@
-<img [src]="cat.pictureUrl" title="tphoto" alt="Cat Photo" /> <!-- property binding -->
-
-<div class="tname">{{cat.name}}, <span class="age">{{cat.categorie}}</span></div> <!-- string interpolation -->
-
-<div class="tinfo"><i class="fa fa-book" aria-hidden="true"> 0 </i><i class="fa fa-users" aria-hidden="true"> 0 </i></div>
+<div class="tphoto">
+  <img [src]="cat.pictureUrl" title="tphoto" alt="Cat Photo"/> <!-- property binding -->
+  <div class="tname">{{cat.name}}, <span class="age">{{cat.categorie}}</span></div> <!-- string interpolation -->
+  <div class="tinfo"><i class="fa fa-book" aria-hidden="true"> 0 </i><i class="fa fa-users" aria-hidden="true"> 0 </i></div>
+</div>
