--- a/cat-card/cat-cards/src/app/app.component.html
+++ b/cat-card/cat-cards/src/app/app.component.html
@@ -1,9 +1,7 @@
 <div class="tbg">
   <app-cat-header></app-cat-header>
   <div class="tbgwrap" >
-<!--    <app-card></app-card>-->
-
-    <router-outlet ></router-outlet>
+    <div class="tphoto"><app-card ></app-card></div>
 
     <app-cat-controls></app-cat-controls>
   </div>
