--- a/cat-card/cat-cards/src/app/card/card.component.html
+++ b/cat-card/cat-cards/src/app/card/card.component.html
@@ -1,10 +1,11 @@
-<div class="tphoto"
+<div
      [@cardAnimator]="animationState"
      (@cardAnimator.done)="resetAnimationState($event)"
      (swipeleft)='startAnimation("swipeleft")'
      (swiperight)='startAnimation("swiperight")'
 >
-  <app-cat></app-cat>
+<router-outlet> </router-outlet>
+
 </div>
 
     
