--- a/cat-card/cat-cards/src/app/app.component.html
+++ b/cat-card/cat-cards/src/app/app.component.html
@@ -1,7 +1,8 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <div class="tbg">
   <app-cat-header></app-cat-header>
-  <div class="tbgwrap" >
-    <div class="tphoto"><app-card ></app-card></div>
+  <div class="row tbgwrap">
+    <div class="tphoto row col-xs-12"><app-card></app-card></div>
     <app-cat-controls></app-cat-controls>
   </div>
 </div>
