--- a/cat-card/cat-cards/src/app/card/card.component.html
+++ b/cat-card/cat-cards/src/app/card/card.component.html
@@ -3,6 +3,8 @@
      (@cardAnimator.done)="resetAnimationState($event)"
      (swipeleft)='startAnimation("swipeleft")'
      (swiperight)='startAnimation("swiperight")'
+     style="margin: 10px;"
+
 >
 <router-outlet> </router-outlet>
 
