--- a/cat-card/cat-cards/src/app/cat-details/cat-details.component.css
+++ b/cat-card/cat-cards/src/app/cat-details/cat-details.component.css
@@ -11,3 +11,7 @@ mat-form-field.mat-form-field {
   margin: 10px 10px 10px 10px;
   width: 50px;
 }
+
+.mat-form-field-underline {
+  background-color: red;
+}
