--- a/cat-card/cat-cards/src/app/cat-controls/cat-controls.component.html
+++ b/cat-card/cat-cards/src/app/cat-controls/cat-controls.component.html
@@ -1,5 +1,5 @@
 <div class="tcontrols">
   <div class="tno"><i class="fa fa-times fa-xs" aria-hidden="true"></i></div>
-  <div class="ti"><i class="fa fa-info" aria-hidden="true"></i></div>
+  <div class="ti" (click)="onFetchNewRandomCat()"><i class="fa fa-info" aria-hidden="true"></i></div>
   <div class="tyes"><i class="fa fa-heart fa-xs" aria-hidden="true"></i></div>
 </div>
