--- a/cat-card/cat-cards/src/app/cat/cat.component.css
+++ b/cat-card/cat-cards/src/app/cat/cat.component.css
@@ -70,12 +70,13 @@
 }
 
 .tname {
-  padding: 15px;
+  /*padding: 15px;*/
   font-size: 20px;
   font-family: 'Helvetica', sans-serif;
   float: left;
+  width: 90%;
 }
-.tname .age { font-weight: 200; }
+/* .tname .age { font-weight: 200; } */
 .tinfo { font-family: 'Helvetica', sans-serif; }
 .tinfo .fa-users, .tinfo .fa-book {
   color: #c0c0c0;
