--- a/cat-card/cat-cards/src/app/cat/cat.component.html
+++ b/cat-card/cat-cards/src/app/cat/cat.component.html
@@ -1,7 +1,7 @@
 <!--<div class="tphoto">-->
 <div style="height: 200px;" style="">
   <mat-form-field  appearance="standard" style="width: 100%; text-align:right" [floatLabel]="auto">
-    <input matInput #countLikes
+    <input appHighlight matInput #countLikes
            class="age form-control"
            value="Random Cat Local Reference"
            style="text-align: center"
