--- a/cat-card/cat-cards/src/app/cat-header/cat-header.component.html
+++ b/cat-card/cat-cards/src/app/cat-header/cat-header.component.html
@@ -2,7 +2,10 @@
 <div class="theader">
 
   <i class="fa fa-search" aria-hidden="true"></i>
-  <i class="fa fa-plus-square" aria-hidden="true"></i>
+  <a routerLink="cat/add"><i class="fa fa-plus-square" aria-hidden="true"></i></a>
+  <!-- [routerLink]="['route']" this is relative path ../nestledComponent-->
+  <!-- [routerLink]="['route', 'param1', 'param2']" this is absolute path /rootComponent-->
+  <!-- roouterLinkActive Directive -->
   <div class="tlogo">
     <img src="/assets/thecatapi_256xW.png" alt="Api Cat Logo" title="Api Cat Logo" />
   </div>
