--- a/cat-card/cat-cards/src/app/cat-header/cat-header.component.html
+++ b/cat-card/cat-cards/src/app/cat-header/cat-header.component.html
@@ -6,7 +6,7 @@
   <!-- [routerLink]="['route']" this is relative path ../nestledComponent-->
   <!-- [routerLink]="['route', 'param1', 'param2']" this is absolute path /rootComponent-->
   <!-- roouterLinkActive Directive -->
-  <div class="tlogo">
+  <div class="tlogo" routerLink="cat/">
     <img src="/assets/thecatapi_256xW.png" alt="Api Cat Logo" title="Api Cat Logo" />
   </div>
 </div>
