--- a/cat-card/cat-cards/src/app/cat/cat.component.html
+++ b/cat-card/cat-cards/src/app/cat/cat.component.html
@@ -1,5 +1,3 @@
-<!--<div class="tphoto">-->
-<div style="height: 200px;" style="">
   <mat-form-field  appearance="standard" style="width: 100%; text-align:right" [floatLabel]="auto">
     <input appHighlight matInput #countLikes
            class="age form-control"
@@ -8,21 +6,9 @@
            (click)="onPassingLocalReference(countLikes)"> <!-- local references type HTMLInputElement-->
     <!-- style="width:10px;" (onclick)="onPassingLocalReference(countLikes.value)">      local references type String -->
   </mat-form-field>
-  <img [src]="cat.pictureUrl" title="tphoto" alt="Cat Photo" style="width:100%; height: 100%;" (click)="fetchNewRandomCat()"/><!-- property binding one way -->
-  <div class="tname" >
-    <mat-grid-list cols="4" rowHeight="100px">                                  <!-- directives list elements from catComponent -->
-      <mat-grid-tile
-        *ngFor="let tile of tiles"
-        [colspan]="tile.cols"
-        [rowspan]="tile.rows"
-        [style.background]="tile.color">
-        {{tile.text}}                                                           <!-- string interpolation -->
-      </mat-grid-tile>
-    </mat-grid-list>
 
-
-
-    <div style="text-align: center">
-  <app-cat-controls></app-cat-controls>
+  <div style="height: 270px; " >
+    <img [src]="cat.pictureUrl" title="tphoto" alt="Cat Photo" style="border-radius: 20px; width:100%; height: 100%;" (click)="fetchNewRandomCat()"/><!-- property binding one way -->
   </div>
-</div>
+  <app-cat-controls ></app-cat-controls>
+  <app-summary [catSearchId]="catId" [catWidth]="cat.width" [catHeight]="cat.height"><app-summary>
