--- a/cat-card/cat-cards/src/app/cat/cat.component.html
+++ b/cat-card/cat-cards/src/app/cat/cat.component.html
@@ -10,5 +10,7 @@
   <div style="height: 270px; " >
     <img [src]="cat.pictureUrl" title="tphoto" alt="Cat Photo" style="border-radius: 20px; width:100%; height: 100%;" (click)="fetchNewRandomCat()"/><!-- property binding one way -->
   </div>
-  <app-cat-controls ></app-cat-controls>
-  <app-summary [catSearchId]="catId" [catWidth]="cat.width" [catHeight]="cat.height"><app-summary>
+  <app-cat-controls [catVotingId]="cat.id"></app-cat-controls>
+  <p *ngIf="catVoting"> votaste al gato! </p>
+  <app-summary [catSearchId]="cat.id" [catWidth]="cat.width" [catHeight]="cat.height"><app-summary>
+
